# chibarobo-2024

./: 11-01_Full_HD_1080p.mov
install/: local_setup.sh  setup.sh
install/R1_undercarriage/lib/R1_undercarriage/: undercarriage
install/R1_undercarriage/share/R1_undercarriage/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/R1_undercarriage/share/R1_undercarriage/cmake/: R1_undercarriageConfig.cmake
install/R1_undercarriage/share/R1_undercarriage/launch/: example.launch
install/robomas_plugins/share/robomas_plugins/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robomas_plugins/share/robomas_plugins/cmake/: export_robomas_plugins__rosidl_generator_cppExport.cmake  export_robomas_plugins__rosidl_generator_pyExport-noconfig.cmake  export_robomas_plugins__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_robomas_plugins__rosidl_typesupport_fastrtps_cExport.cmake  export_robomas_plugins__rosidl_typesupport_fastrtps_cppExport.cmake  robomas_plugins__rosidl_typesupport_cExport-noconfig.cmake  robomas_plugins__rosidl_typesupport_cppExport-noconfig.cmake  robomas_plugins__rosidl_typesupport_cppExport.cmake  (+1 more)
log/: latest_build
src/R1_undercarriage/: CMakeLists.txt  package.xml
src/R1_undercarriage/include/R1_undercarriage/: undercarriage.hpp  upper.hpp
src/R1_undercarriage/launch/: example.launch
src/R1_undercarriage/src/: undercarriage.cpp
src/robomas_plugins/include/robomas_plugins/: can_utils.hpp
src/robomas_second_plugins/: CMakeLists.txt  package.xml
src/robomas_second_plugins/include/robomas_second_plugins/: robomas_second_bridge.hpp
src/robomas_second_plugins/launch/: robomas_second_bridge_launch.xml
src/robomas_second_plugins/src/: robomas_second_bridge.cpp
src/robomas_second_plugins/udev/: 60-robomas_second.rules
src/upper/: CMakeLists.txt  package.xml
src/upper/include/upper/: upper.hpp
src/upper/src/: upper.cpp
(+28 files in other folders)
